[Feat/#4]: Openai 연동